# NBody

./: CMakeLists.txt  CMakeSettings.json  README.md  gravity.cl  leapfrog.cl  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nbodysim2d.cpp  nbodysim2d.h  nbodysim2dresources.qrc  openglsceneresources.qrc  openglscenewidget.cpp  openglscenewidget.h  qopenglsceneresources.qrc  qopenglscenevertex.frag  qopenglscenevertex.vert  qopenglscenewidget.cpp  qopenglscenewidget.h  test_kernel.cl
CL/: OpenCL.lib
OpenCL/: CMakeLists.txt  README.md
OpenCL/lib/Windows/Debug/: OpenCL.exp  OpenCL.lib
OpenCL/lib/Windows/MinSizeRel/: OpenCL.exp
OpenCL/lib/Windows/RelWithDebInfo/: OpenCL.exp
OpenCL/lib/Windows/Release/: OpenCL.exp
